# unipress

./: .buildinfo  .buildinfo.bak  .dockerignore  .gitignore  .my_secrets  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  genindex.html  high_scores.json  index.html  links  main.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test_running_sprite.py  unipress_cli.py
.claude/commands/: git-start.md  new-game.md  qa.md  test-coverage.md
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: assets.doctree  base_game.doctree  index.doctree  server.doctree  settings.doctree  sound.doctree
.doctrees/architecture/: components.doctree  data_flow.doctree  decisions.doctree  deployment.doctree  overview.doctree  uml.doctree
.doctrees/tutorials/: assets.doctree  contributing.doctree  development_setup.doctree  docker.doctree  first_game.doctree  game_design.doctree  i18n.doctree  installation.doctree  performance.doctree  quick_start.doctree  sound.doctree  testing.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  git-flow.yml
_modules/: index.html
_modules/unipress/: client.html
_sources/: index.md.txt
_sources/api/: base_game.md.txt  index.rst.txt
_sources/architecture/: overview.md.txt  uml.md.txt
_sources/tutorials/: development_setup.md.txt
api/: assets.html  base_game.html  index.html  server.html  settings.html  sound.html
architecture/: components.html  data_flow.html  decisions.html  deployment.html  overview.html  uml.html
docs/: git-flow-setup.md  jump-sky-todo.md
docs/adr/: 001-dependency-management-uv.md  002-game-framework-arcade.md  003-development-tools-ruff-pytest.md  004-game-design-standards.md  005-conventional-commits-git-cz.md  006-type-checking-mypy.md  007-ci-cd-github-actions.md  (+19 more)
tests/: __init__.py  test_base_game.py
tutorials/: assets.html  contributing.html  development_setup.html  docker.html  first_game.html  game_design.html  i18n.html  installation.html  performance.html  quick_start.html  sound.html  testing.html
unipress/: ASTONISH_PROJECT_SPECIFICATION.md  __init__.py  client.py  settings.toml
(+76 files in other folders)
